--- a/calender/index.html
+++ b/calender/index.html
@@ -14,6 +14,10 @@
             <div class="month">
                 <span id="current-date"></span>
             </div>
+            <label for="yearDrop">Select year:</label>
+            <select name="year" id="yearDrop"></select>
+            <label for="monthDrop">Select month:</label>
+            <select name="month" id="monthDrop"></select>
             <div class="nav">
                 <button id="previous">&lt;</button>
                 <button id="next">&gt;</button>
@@ -65,8 +69,6 @@
         </div>
     </div>
 
-
-    
 
     <script src="script.js"></script>
 </body>
