--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="calender/index.html">Calendar</a> <br>
     <a href="Expense-Tracker/index.html">Expense-Tracker</a> <br>
     <a href="Digital-Clock/index.html">Digital-Clock</a>
+    <a href="Toggle-Password/index.html">Toggle-Password</a>
     
 </body>
 </html>
