--- a/Toggle-Password/index.html
+++ b/Toggle-Password/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="box">
         <h1>Toggle password</h1>
-        <input id="password" class="input" type="text" placeholder="password ">
+        <input id="password" class="input" type="password" placeholder="password ">
         <button id="toggleBtn">
             <i id="icon" class="fa-solid fa-eye"></i>
         </button>
