--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a href="Expense-Tracker/index.html">Expense-Tracker</a> <br>
     <a href="Digital-Clock/index.html">Digital-Clock</a>
     <a href="Toggle-Password/index.html">Toggle-Password</a>
+    <a href="RandomPassword-Generator//index.html">RandomPassword-Generator</a>
     
 </body>
 </html>
