--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <a href="Clock-Calendar/index.html">clock-Calendar</a> <br>
     <a href="calender/index.html">Calendar</a> <br>
     <a href="Expense-Tracker/index.html">Expense-Tracker</a> <br>
-    <a href="Digital-Clock/index.html">Digital-Clock</a>
-    <a href="Toggle-Password/index.html">Toggle-Password</a>
+    <a href="Digital-Clock/index.html">Digital-Clock</a><br>
+    <a href="Toggle-Password/index.html">Toggle-Password</a><br>
     <a href="RandomPassword-Generator//index.html">RandomPassword-Generator</a>
     
 </body>
