--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="Digital-Clock/index.html">Digital-Clock</a><br>
     <a href="Toggle-Password/index.html">Toggle-Password</a><br>
     <a href="RandomPassword-Generator//index.html">RandomPassword-Generator</a>
+    <a href="FruityVice//index.html">FruityVice</a>
     
 </body>
 </html>
