--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="Toggle-Password/index.html">Toggle-Password</a><br>
     <a href="RandomPassword-Generator//index.html">RandomPassword-Generator</a>
     <a href="FruityVice//index.html">FruityVice</a>
+    <a href="harryPotter//index.html">Harry Potter</a>
     
 </body>
 </html>
